--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
   <body>
     <div class="container" id="app">
       <h3 class="text-center">VueNews</h3>
-      <div class="columns medium-3" v-for="result in results">
-        <div class="card">
-          <div class="card-divider">
-            {{ result.title }}
-          </div>
-          <div class="card-section">
-            <p>{{ result.abstract }}.</p>
-          </div>
-        </div>
-      </div>
+      <news-list :results="results"></news-list>
     </div>
   </body>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
