--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   <body>
     <div class="container" id="app">
       <h3 class="text-center">VueNews</h3>
+      <section class="callout secondary">
+        <h5 class="text-center">Filter by Category</h5>
+        <form>
+          <div class="row">
+            <div class="large-6 columns">
+              <select v-model="section">
+                <option v-for="section in sections" :value="section">{{ section }}</option>
+              </select>
+            </div>
+            <div class="medium-6 columns">
+              <a @click="getPosts(section)" class="button expanded">Retrieve</a>
+            </div>
+          </div>
+        </form>
+      </section>
       <news-list :results="results"></news-list>
     </div>
   </body>
